# biovector-eval

./: .gitignore  pyproject.toml
docs/: metabolite_roadmap.md  vector_search_intro.md
notebooks/: similarity_multi-vector_ivf.ipynb  similarity_single-pooled_ivf.ipynb  similarity_single-primary_hnsw.ipynb  similarity_single-primary_ivf.ipynb
scripts/: build_flat_indices.py  generate_embeddings.py  parse_hmdb_xml.py  run_evaluation.py
tests/: __init__.py
tests/fixtures/: sample_metabolites.json
tests/integration/: __init__.py
tests/integration/metabolites/: __init__.py
tests/unit/: __init__.py  test_ground_truth.py  test_metrics.py  test_performance.py
tests/unit/metabolites/: __init__.py
